fix(a11y): address a11y issues and enable tests (#733)
Co-authored-by: Claire.Nicholas <Z00B3R3@w6nxmk4t6t.target.com>
Co-authored-by: dave vader <48764154+plyr4@users.noreply.github.com>
Co-authored-by: Kelly Merrick <kelly.merrick@target.com>

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -207,7 +207,7 @@ nav {
     }
 
     &:last-child {
-      color: var(--color-bg-dark);
+      color: var(--color-offwhite);
       font-weight: bold;
 
       background-color: var(--color-lavender);
