--- a/src/scss/_graph.scss
+++ b/src/scss/_graph.scss
@@ -34,6 +34,7 @@
   }
 
   li {
+    display: flex;
     margin-right: 1rem;
   }
 
@@ -54,6 +55,8 @@
   position: relative;
 
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   width: 100%;
   min-height: 300px;
 
@@ -68,6 +71,17 @@
 
     margin: 1rem;
   }
+}
+
+.elm-build-graph-error {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  padding: 1rem;
+
+  background: var(--color-bg-dark);
+  border-bottom: 1px solid var(--color-red);
 }
 
 .elm-build-graph-legend {
