--- a/src/scss/_themes.scss
+++ b/src/scss/_themes.scss
@@ -171,3 +171,79 @@ body.theme-light {
     color: var(--color-red-darkest);
   }
 }
+
+// build graph
+
+/*! purgecss start ignore */
+
+.theme-light .elm-build-graph-legend-node {
+  stroke: var(--color-coal-light);
+}
+
+.theme-light .d3-build-graph-edge-tip {
+  fill: var(--color-coal-light);
+  stroke: var(--color-coal-light);
+}
+
+.theme-light .d3-build-graph-node-outline-rect {
+  &.-pending {
+    stroke: var(--color-coal-light);
+  }
+
+  &.-running {
+    stroke: var(--color-yellow);
+  }
+
+  &.-success {
+    stroke: var(--color-green);
+  }
+
+  &.-failure,
+  &.-error {
+    stroke: var(--color-red);
+  }
+
+  &.-canceled {
+    stroke: var(--color-cyan-dark);
+  }
+
+  &.-killed,
+  &.-skipped {
+    stroke: var(--color-lavender);
+  }
+
+  &.-focus,
+  &.-hover {
+    stroke: var(--color-primary);
+  }
+}
+
+.theme-light .d3-build-graph-edge-path {
+  &.-pending,
+  &.-success,
+  &.-failure,
+  &.-canceled,
+  &.-killed,
+  &.-skipped,
+  &.-error {
+    stroke: var(--color-coal-light);
+  }
+
+  &.-focus,
+  &.-hover {
+    stroke: var(--color-primary);
+  }
+}
+
+// icon content
+.theme-light .d3-build-graph-node-a svg {
+  stroke: var(--color-offwhite);
+
+  &.-pending,
+  &.-killed,
+  &.-skipped {
+    fill: var(--color-offwhite);
+  }
+}
+
+/*! purgecss end ignore */
