--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -23,20 +23,10 @@
   &-description {
     font-size: 1rem;
   }
-}
 
-.event-settings {
-  flex-wrap: wrap;
-  display: flex;
-
-  &-title {
-    border-bottom: var(--line-width) solid var(--color-white);
-    border-bottom-width: thin;
+  &-subtitle {
+    margin-bottom: 0;
   }
-}
-
-.event-settings div {
-  flex: 1 0 80%;
 }
 
 // for the admin action section
