refactor: repo settings page with new allow events

--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -251,6 +251,16 @@
 
   border: none;
 
+   // .-two-col is for arranging controls in two columns
+   &.-two-col {
+    flex-flow: row wrap;
+    gap: 0.5rem;
+
+    .form-control {
+      flex: 0 0 40%;
+    }
+  }
+  
   .form-control {
     margin-right: 0.5rem;
   }
