--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -13,10 +13,20 @@
   border-bottom: 2px solid var(--color-lavender);
 }
 
-.table-base tr .-icon {
-  width: 3rem;
+.table-base tr .table-icon {
+  width: 5.65rem;
   padding-left: 1.25rem;
 }
+
+.table-base .table-icon div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  height: 2.5rem;
+  vertical-align: middle;
+}
+
 
 .table-base tr {
   padding: 0.35em;
@@ -57,9 +67,19 @@
 }
 
 .table-base td {
-  padding: 0.625em;
-
+  padding: 0.3em;
+  padding-left: .625em;
   vertical-align: top;
+}
+
+.table-base td:last-child {
+  padding-right: 1rem;
+}
+
+.table-base .single-item {
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+  display: inline-block;
 }
 
 .table-base td .list-item {
@@ -79,12 +99,8 @@ td .key .list-item {
   max-width: 24rem;
 }
 
-.table-base .source-id {
-  padding: 0.2rem 1rem;
-
-  font-weight: 300;
-
-  background-color: var(--color-bg);
+.table-base .source-id .list-item {
+  max-width: 22rem;
 }
 
 .table-base tr.-success {
@@ -186,7 +202,7 @@ td .key .list-item {
     border-bottom: 2px solid var(--color-lavender);
   }
 
-  .table-base tr .-icon {
+  .table-base tr .table-icon {
     width: inherit;
     padding-left: 0.6rem;
   }
@@ -217,10 +233,6 @@ td .key .list-item {
 
   .table-base td a {
     max-width: 8rem;
-  }
-
-  .table-base td .list-item {
-    font-size: 0.9rem;
   }
 
   .table-base td::before {
