chore: general cleanup and consistency with comments etc

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1481,7 +1481,7 @@ details.build-toggle {
 }
 
 // build filters
-.build-bar {
+.builds-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
