fix: secrets spacing, source repos focus, default enabled events, minor tweaks

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1701,6 +1701,10 @@ details.build-toggle {
   }
 }
 
+.shared-secrets-container {
+  margin-top: 1.2rem;
+}
+
 // Secrets Section end
 
 .field-help-link {
