--- a/src/scss/_table.scss
+++ b/src/scss/_table.scss
@@ -81,6 +81,10 @@
   padding-bottom: 0.375rem;
 }
 
+.table-base .-block {
+  display: block;
+}
+
 .table-base td .list-item {
   display: flex;
   max-width: 12rem;
