fix: remove button padding

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1633,7 +1633,7 @@ details.build-toggle {
 
 .image .button,
 .parameter .button {
-  margin-right: 1rem;
+  margin-left: 1rem;
   margin-bottom: 0.1rem;
 }
 
