--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -7,7 +7,8 @@
 // styles for the settings pages
 
 .repo-settings,
-.my-settings {
+.my-settings,
+.admin-settings {
   display: flex;
   flex-wrap: wrap;
 }
@@ -47,4 +48,35 @@
   display: flex;
   flex-direction: column;
   margin-right: 0.8em;
+}
+
+// todo: move this to a more appropriate file
+// for the admin settings page
+.admin-settings-export {
+  max-width: 45rem;
+}
+
+.admin-settings-export-container {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  .form-controls {
+    margin-right: 1rem;
+  }
+  textarea {
+    min-height: 10rem;
+    max-height: 20rem;
+
+    min-width: 30rem;
+    max-width: 45rem;
+  }
+}
+
+.admin-settings-export-textarea-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  div {
+    margin-left: 1rem;
+  }
 }
