--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -74,8 +74,20 @@
 
 .admin-settings-export-textarea-container {
   display: flex;
+  .form-control {
+    flex: 1;
+    textarea {
+      min-height: 10rem;
+      max-height: 20rem;
+    }
+  }
+
+  & > :last-child {
+    display: flex;
+    flex-direction: column;
+      align-items: center;
   justify-content: center;
-  align-items: center;
+  }
   div {
     margin-left: 1rem;
   }
