wip: more form controls and some testing for routes

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -72,6 +72,13 @@
   }
 }
 
+.form-control.-wide {
+  flex: 1;
+  input {
+    flex: 1;
+  }
+}
+
 .admin-settings-export-textarea-container {
   display: flex;
   .form-control {
