feat: cypress tests for settings and enhanced form input ux

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -51,14 +51,14 @@
 }
 
 // site admin platform settings
-.env-key-value {
-  padding: 0.2rem 0.4rem;
-
-  font-family: var(--font-code);
-
-  background-color: var(--color-bg-dark);
-}
-
-.settings-env-key {
+.settings-info {
   font-size: 1rem;
+
+  .info-value {
+    padding: 0.2rem 0.4rem;
+  
+    font-family: var(--font-code);
+  
+    background-color: var(--color-bg-dark);
+  }  
 }
