feat(dashboard): populate all card data

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -13,6 +13,7 @@
 
   // grays
   --color-coal-dark: hsl(0, 0%, 12%);
+  --color-coal-darker: hsl(0, 0%, 10%);
   --color-coal: hsl(0, 0%, 16%); // main dark bg
   --color-coal-light: hsl(0, 0%, 34%);
 
