--- a/src/scss/_dashboards.scss
+++ b/src/scss/_dashboards.scss
@@ -10,51 +10,46 @@
 
 .card {
   flex-basis: 100%;
-  margin: 0.5rem;
+  margin: 0.5rem; 
 
   background-color: var(--color-bg-dark);
 }
 
 .card-org-repo {
   display: flex;
-  flex-direction: column;
-  padding: 0 0 0 1rem;
+  align-items: center;
+  gap: .5rem;
 
-  background-color: var(--color-bg-darker);
+  background-color: var(--color-bg-darkest);
 }
 
 .build-data {
-  display: flex;
-  flex-direction: column;
-  margin: 0.5rem 0 0 0;
-  padding: 0 0 0 1rem;
-
-  background-color: var(--color-coal-darker);
+  columns: 2;
+  list-style-type: none;
+  padding: 0.5rem;
 }
 
-.build-status {
+.build-data li{
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  // flex-direction: column;
+  align-items: center;
+  gap: .5rem;
 }
 
-.build-data-left {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  margin: 0.5rem 0;
-  padding: 0 0 0 1rem;
+.build-data li:nth-child(n + 4){
+  justify-content: right;
 
-  background-color: var(--color-coal-darker);
 }
 
-.build-data-right {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
+.dashboard-recent-builds {
+  margin: 0.5rem;
+  padding: 0 1rem;
 
-  margin: 0.5rem 0;
-  padding: 0 1rem 0 1rem;
+  background-color: var(--color-bg-darkest);
+}
+.no-builds {
+  margin: 0.5rem;
+  padding: 0 1rem;
 
-  background-color: var(--color-coal-kinda-dark);
+  background-color: var(--color-bg-darkest);
 }
