--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -12,8 +12,8 @@
   --color-lavender-light: hsl(286, 29%, 65%); // good for text on coal
 
   // grays
+  --color-coal-darkest: hsl(0, 0%, 10%);  
   --color-coal-dark: hsl(0, 0%, 12%);
-  --color-coal-darker: hsl(0, 0%, 10%);
   --color-coal: hsl(0, 0%, 16%); // main dark bg
   --color-coal-light: hsl(0, 0%, 34%);
 
